# coverage-checking

./: .gitignore  Makefile  Pattern.agda  README.md  coverage-checking.agda-lib  coverage-checking.cabal  exhaustiveness-checking.agda-lib  index.agda  rewrite-rules.yaml
.github/workflows/: build-docs.yaml  generate-haskell.yaml
lib/: CoverageCheck.hs  Example.hs
lib/CoverageCheck/: Exhaustiveness.hs  GlobalScope.hs  Instance.hs  Name.hs  NonRedundancy.hs  Prelude.hs  Subsumption.hs  Syntax.hs  Usefulness.hs
lib/CoverageCheck/Usefulness/: Algorithm.hs  Definition.hs  Useful.hs  UsefulP.hs
lib/CoverageCheck/Usefulness/Algorithm/: MissingConstructors.hs  Properties.hs  Raw.hs
src/: CoverageCheck.agda  Example.agda  Exhaustiveness.agda  Extra.agda  Pattern.agda  Tests.agda  Usefulness.agda
src/CoverageCheck/: BranchSelection.agda  Exhaustiveness.agda  GlobalScope.agda  Instance.agda  Name.agda  NonRedundancy.agda  Prelude.agda  Subsumption.agda  Syntax.agda  Tests.agda  Usefulness.agda
src/CoverageCheck/Usefulness/: Algorithm.agda  Definition.agda  Properties.agda  Useful.agda  UsefulP.agda  UsefulV.agda  Usefulness1.agda
src/CoverageCheck/Usefulness/Algorithm/: MissingConstructors.agda  Properties.agda  Raw.agda  Termination.agda  Types.agda
src/Haskell/Data/: Bifoldable.agda  Bifoldable1.agda  Bifunctor.agda
src/Haskell/Data/List/: NonEmpty.agda
test/: Tests.agda  coverage-checking-test.agda-lib
