cabal-version:      3.0
name:               coverage-check
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Satoshi Takimoto
maintainer:         wasabi.nvim.st@gmail.com
-- copyright:
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options:
      -Wall
      -fno-warn-unused-matches
      -fno-warn-unused-imports
      -fno-warn-unused-local-binds

library
    import:           warnings
    exposed-modules:  CoverageCheck.Prelude
                    , CoverageCheck.Syntax
                    , CoverageCheck.Instance
                    , CoverageCheck.BranchSelection
                    , CoverageCheck.Name
                    , CoverageCheck.GlobalScope
                    , CoverageCheck.Usefulness
                    , CoverageCheck.Usefulness.Algorithm
                    , CoverageCheck.Usefulness.Useful
                    , CoverageCheck.Exhaustiveness
                    , CoverageCheck
    build-depends:    base >=4.17 && <5
                    , containers
    hs-source-dirs:   lib
    default-language: GHC2021

    ghc-options:
      -- agda2hs generates many (safe) incomplete patterns
      -fno-warn-incomplete-patterns
      -fno-warn-name-shadowing
